blinker - Added new ToggleSwitch being used in the Equalizer window. Modified the Eq Sliders. Added Horizontal slider (PlayerControls) property IsMoveToPointEnabled. Also, fixed Equalizer window to retain settings.

--- a/LinkerPlayer/Styles/EqVerticalSlider.xaml
+++ b/LinkerPlayer/Styles/EqVerticalSlider.xaml
@@ -9,10 +9,28 @@
       <Setter.Value>
         <ControlTemplate TargetType="RepeatButton">
           <Border
-            Width="3"
+            x:Name="increaseBorder"
+            Width="2"
             Background="{DynamicResource ControlDisabledBrush}"
             BorderBrush="{DynamicResource ControlDisabledBrush}"
-            BorderThickness="1" />
+            BorderThickness="1">
+            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+          </Border>
+          <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+              <Setter Property="Background" TargetName="increaseBorder" Value="{StaticResource ControlMouseOverBrush}"/>
+              <Setter Property="BorderBrush" TargetName="increaseBorder" Value="{StaticResource ControlBorderDarkBrush}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="true">
+              <Setter Property="Background" TargetName="increaseBorder" Value="{StaticResource ControlBackgroundBrush}"/>
+              <Setter Property="BorderBrush" TargetName="increaseBorder" Value="{StaticResource ControlBorderDarkBrush}"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+              <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56"/>
+              <Setter Property="Background" TargetName="increaseBorder" Value="{StaticResource ControlDisabledBrush}"/>
+              <Setter Property="BorderBrush" TargetName="increaseBorder" Value="{StaticResource ControlDisabledBrush}"/>
+            </Trigger>
+          </ControlTemplate.Triggers>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
@@ -25,11 +43,29 @@
       <Setter.Value>
         <ControlTemplate TargetType="RepeatButton">
           <Border
-            Width="5"
-            Background="{DynamicResource ControlAccentBrush}"
-            BorderBrush="{DynamicResource ControlAccentBrush}"
+            x:Name="decreaseBorder"
+            Width="2"
+            Background="{DynamicResource ControlAccentDarkBrush}"
+            BorderBrush="{DynamicResource ControlAccentDarkBrush}"
             BorderThickness="1"
-            SnapsToDevicePixels="True" />
+            SnapsToDevicePixels="True">
+            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+          </Border>
+          <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+              <Setter Property="Background" TargetName="decreaseBorder" Value="{StaticResource ControlMouseOverBrush}"/>
+              <Setter Property="BorderBrush" TargetName="decreaseBorder" Value="{StaticResource ControlBorderDarkBrush}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="true">
+              <Setter Property="Background" TargetName="decreaseBorder" Value="{StaticResource ControlBackgroundBrush}"/>
+              <Setter Property="BorderBrush" TargetName="decreaseBorder" Value="{StaticResource ControlBorderDarkBrush}"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+              <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56"/>
+              <Setter Property="Background" TargetName="decreaseBorder" Value="{StaticResource ControlDisabledBrush}"/>
+              <Setter Property="BorderBrush" TargetName="decreaseBorder" Value="{StaticResource ControlDisabledBrush}"/>
+            </Trigger>
+          </ControlTemplate.Triggers>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
@@ -44,12 +80,12 @@
           <!--  Add name to ellipse to use in ControlTemplate triggers  -->
           <Ellipse
             x:Name="Ellipse"
-            Width="20"
+            Width="12"
             Height="12"
-            Fill="{DynamicResource ControlAccentBrush}" />
+            Fill="{DynamicResource ControlAccentDarkBrush}" />
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-              <Setter TargetName="Ellipse" Property="Fill" Value="Cyan" />
+              <Setter TargetName="Ellipse" Property="Fill" Value="{DynamicResource ControlAccentDarkBrush}" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
               <Setter TargetName="Ellipse" Property="Fill" Value="{DynamicResource ControlDisabledBrush}" />
@@ -69,13 +105,13 @@
       </Grid.ColumnDefinitions>
       <Track x:Name="PART_Track" Grid.Column="1">
         <Track.DecreaseRepeatButton>
-          <RepeatButton Command="Slider.DecreaseLarge" Style="{StaticResource SliderDecreaseButton}" />
+          <RepeatButton Style="{StaticResource SliderDecreaseButton}" />
         </Track.DecreaseRepeatButton>
         <Track.Thumb>
           <Thumb Style="{StaticResource SliderThumb}" />
         </Track.Thumb>
         <Track.IncreaseRepeatButton>
-          <RepeatButton Command="Slider.IncreaseLarge" Style="{StaticResource SliderIncreaseButton}" />
+          <RepeatButton Style="{StaticResource SliderIncreaseButton}" />
         </Track.IncreaseRepeatButton>
       </Track>
       <TickBar
