--- a/LinkerPlayer/Styles/CircularButton.xaml
+++ b/LinkerPlayer/Styles/CircularButton.xaml
@@ -92,7 +92,7 @@
 
     <Style.Triggers>
       <Trigger Property="IsMouseOver" Value="True">
-        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentBrush}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentLightBrush}" />
       </Trigger>
     </Style.Triggers>
 
@@ -105,7 +105,7 @@
     TargetType="{x:Type ToggleButton}">
     <Style.Triggers>
       <Trigger Property="ToggleButton.IsChecked" Value="True">
-        <Setter Property="Foreground" Value="{DynamicResource ControlAccentBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource ControlAccentLightBrush}" />
       </Trigger>
       <Trigger Property="IsEnabled" Value="False">
         <Setter Property="Foreground" Value="Gray" />
