--- a/LinkerPlayer/Styles/RectangleButton.xaml
+++ b/LinkerPlayer/Styles/RectangleButton.xaml
@@ -92,7 +92,7 @@
 
     <Style.Triggers>
       <Trigger Property="IsMouseOver" Value="True">
-        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentBrush}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentDarkBrush}" />
       </Trigger>
       <Trigger Property="IsMouseOver" Value="False">
         <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
