--- a/LinkerPlayer/UserControls/TrackInfo.xaml
+++ b/LinkerPlayer/UserControls/TrackInfo.xaml
@@ -21,9 +21,10 @@
     VerticalAlignment="Stretch">
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
+      <RowDefinition Height="5" />
       <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
+      <!--<RowDefinition Height="Auto" />-->
     </Grid.RowDefinitions>
 
     <!--  AlbumCover  -->
@@ -31,8 +32,9 @@
       x:Name="CoverGrid"
       Grid.Row="0"
       Grid.Column="0"
-      Width="300"
-      Margin="3,1,0,2">
+      VerticalAlignment="Stretch"
+      HorizontalAlignment="Stretch"
+      Margin="0,1,0,0">
 
       <Grid
         x:Name="ImageGrid"
@@ -41,10 +43,8 @@
 
         <Image
           x:Name="TrackImage"
-          Width="300"
-          Height="300"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"
+          HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch"
           Source="{Binding DefaultAlbumImage}">
           <Image.Style>
             <Style TargetType="Image">
@@ -62,14 +62,20 @@
           x:Name="TrackImageText"
           Margin="0,0,0,58"
           HorizontalAlignment="Center"
-          VerticalAlignment="Bottom"
+          VerticalAlignment="Stretch"
+          Height="5"
           Text="[ No Selection ]" />
 
       </Grid>
     </Grid>
 
-    <Grid
+    <!--<GridSplitter
       Grid.Row="1"
+      HorizontalAlignment="Stretch"
+      Background="Transparent"/>-->
+
+    <Grid
+      Grid.Row="2"
       Margin="0,0,0,0"
       HorizontalAlignment="Stretch"
       VerticalAlignment="Center">
