blinker - Major changes: - new PlayerEngine - new SpectrumAnalzer (WIP) - Reduced the amount of audio code and files

--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -245,6 +245,7 @@
           Margin="6,0,10,0"
           VerticalAlignment="Center"
           Maximum="100"
+          ValueChanged="VolumeSlider_ValueChanged"
           Style="{StaticResource CustomHorizontalSlider}" />
 
       </Grid>
