--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -108,6 +108,8 @@
           ScrollViewer.HorizontalScrollBarVisibility="Auto"
           ScrollViewer.VerticalScrollBarVisibility="Auto"
           SelectionChanged="TracksTable_OnSelectionChanged"
+          SelectionMode="Single"
+          SelectionUnit="FullRow"
           VirtualizingStackPanel.IsVirtualizing="True"
           VirtualizingStackPanel.VirtualizationMode="Standard">
 
